--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -6,7 +6,12 @@ jobs:
     steps:
       - uses: "actions/checkout@master"
       - name: "TODO to Issue"
-        uses: "alstr/todo-to-issue-action@v3.0-beta"
-        id: "todo"
+        uses: "alstr/todo-to-issue-action@v1.1.1-beta"
         with:
+          REPO: ${{ github.repository }}
+          BEFORE: ${{ github.event.before }}
+          SHA: ${{ github.sha }}
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          LABEL: "# TODO"
+          COMMENT_MARKER: "#"
+        id: "todo"
